@@ -94,6 +94,7 @@ class SPIOutput: public ola::rdm::DiscoverableRDMControllerInterface {
   const unsigned int m_pixel_count;
   uint16_t m_start_address;  // starts from 1
   bool m_identify_mode;
+  ola::rdm::PersonalityCollection *m_personality_collection;
   ola::rdm::PersonalityManager m_personality_manager;
   ola::rdm::Sensors m_sensors;
 
